# TTA

./: .augment  .augment_full_test_output.txt  .cline  .coverage  .dockerignore  .editorconfig  .env.example  .env.local.example  .env.production.example  .env.staging.example  .gga  .gitignore  .gitleaksignore  .gitmodules  .gitmodules.fixed  .mcp.hypertool.json  .pre-commit-config.yaml  .prospector.yaml  .pytest-firstfail.txt  .pytest-full.txt  .pytest-junit.xml  .pytest-last.txt  .pytest-quiet.txt  .secrets.baseline  .serena  400  404.html  ACCURATE_P0_COMPONENT_STATUS.md  ADVANCED_TESTING_GETTING_STARTED.md  AGENTS.md  AI_DEV_TOOLKIT_PACKAGE.md  API_VALIDATION_IMPROVEMENTS.md  APM_CONTEXT7_RUNTIME_PACKAGE.md  ARCHITECTURE.md  B007_FIXES_REPORT.txt  B904_FIXES_REPORT.txt  BACKEND_STARTUP_FIX.md  BLOAT_ANALYSIS.md  BRANCHING_STRATEGY.md  CHANGELOG.md  (+327 more)
.archive/: README.md
.augment/: AGENT_PRIMITIVES_AUDIT.md  TTA-NOTES-INTEGRATION.md  TTA-NOTES-QUICK-START.md  instructions.md  user_guidelines.md
.cline/: instructions.md
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/: ADVANCED_TESTING_SETUP.md  AGENT_PRIMITIVE_MIGRATION_STATUS.md  CHAT_MODE_ANALYSIS_EXECUTIVE_SUMMARY.md  CHAT_MODE_COVERAGE_ANALYSIS.md  CHAT_MODE_VISUAL_SUMMARY.md  CODEOWNERS  GITHUB_INTEGRATION_GUIDE.md  MISSING_CHAT_MODES_IMPLEMENTATION_GUIDE.md  MISSING_CHAT_MODES_IMPLEMENTATION_GUIDE.md.backup  PHASE1_INVENTORY_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_REVIEW_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_FINAL_SUMMARY.md  PHASE4_REVIEW_SUMMARY.md  PR_DESCRIPTION.md  STANDARDIZATION_WORKFLOW_SUMMARY.md  STANDARDIZATION_WORKFLOW_SUMMARY.md.backup  copilot-instructions.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.metrics/: 2025-10-20.jsonl  2025-10-22.jsonl  2025-10-23.jsonl  2025-10-24.jsonl  2025-10-25.jsonl  2025-10-26.jsonl  2025-10-27.jsonl  2025-10-28.jsonl  2025-10-29.jsonl  2025-11-02.jsonl
.serena/: project.yml
.venv_testneo/: pyvenv.cfg
AI_AGENT_ORCHESTRATION/: index.html
CRITICAL-001-RESOLUTION-SUMMARY/: index.html
DOCUMENTATION_INDEX/: index.html
Documentation/: README.md  project_organization.md
E2E-VALIDATION-STATUS-UPDATE/: index.html
FRONTEND_DEPLOYMENT_FIX/: index.html
ISSUE-048-CODE-SNIPPETS/: index.html
ISSUE-048-COMPLETION-SUMMARY/: index.html
ISSUE-048-FINAL-REPORT/: index.html
ISSUE-048-IMPLEMENTATION-GUIDE/: index.html
ISSUE-048-INVESTIGATION-SUMMARY/: index.html
ISSUE-048-RESOLUTION-SUMMARY/: index.html
ISSUE-048-SESSION-PERSISTENCE-ANALYSIS/: index.html
NEXT-STEPS-AFTER-CRITICAL-001/: index.html
PRE_COMMIT_HOOKS/: index.html
PRODUCTION_READINESS_FIXES/: index.html
STAGING-ENVIRONMENT-NEXT-STEPS/: index.html
STAGING-READINESS-ASSESSMENT/: index.html
_archive/: PHASE_1_COMPLETION_SUMMARY.md  README.md  legacy_README.md
app_tta/: README.md
architecture/: dependency-graph.mmd
backup/: Dockerfile  backup_service.py  requirements.txt
config/: README.md  docker-compose.yml  feature_flags.yaml  tta_config.yaml
configs/: index.html
conflict-resolution-report/: index.html
deployment/: conversational-character-service.yaml
dev-workflow-quick-reference/: index.html
development/: index.html
docker/: README.md
docs/: AI_AGENT_ORCHESTRATION.md  CI_WORKFLOW_AUDIT.md  CI_WORKFLOW_FIXES_PROGRESS.md  CODECOV_SETUP.md  COMPREHENSIVE_INTEGRATION_TEST_REPORT.md  CRITICAL-001-RESOLUTION-SUMMARY.md  DATABASE_ARCHITECTURE_SIMPLIFICATION.md  DOCKER_NEO4J_SETUP.md  DOCUMENTATION_INDEX.md  E2E-VALIDATION-STATUS-UPDATE.md  EXECUTION_CHECKLIST.md  FRONTEND_DEPLOYMENT_FIX.md  HYBRID_TRACKING_GUIDE.md  HYBRID_TRACKING_GUIDE.md.backup  ISSUE-048-CODE-SNIPPETS.md  ISSUE-048-COMPLETION-SUMMARY.md  ISSUE-048-FINAL-REPORT.md  ISSUE-048-IMPLEMENTATION-GUIDE.md  ISSUE-048-INVESTIGATION-SUMMARY.md  ISSUE-048-RESOLUTION-SUMMARY.md  ISSUE-048-SESSION-PERSISTENCE-ANALYSIS.md  MCP_INTEGRATION_SUMMARY.md  MEMORY_SYSTEM_EXTRACTION_SPEC.md  MEMORY_SYSTEM_EXTRACTION_SPEC.md.backup  MEMORY_SYSTEM_PACKAGING_ROADMAP.md  MVP_COMPLETION_SUMMARY.md  NEXT-STEPS-AFTER-CRITICAL-001.md  NEXT_STEPS_SUMMARY.md  OPENHANDS_INTEGRATION_TROUBLESHOOTING.md  OPENHANDS_INTEGRATION_VALIDATION_REPORT.md  OPENHANDS_REAL_WORLD_USAGE.md  PHASE_1_COMPLETION_SUMMARY.md  PRE_COMMIT_HOOKS.md  PRODUCTION_READINESS_FIXES.md  README.md  README.md.backup  REDIS_MESSAGE_COORDINATOR_ANALYSIS.md  STAGING-ENVIRONMENT-NEXT-STEPS.md  STAGING-READINESS-ASSESSMENT.md  TEST_GENERATION_PLAN.md  (+40 more)
documentation-audit-summary/: index.html
entertainment-first-design/: index.html
environments/: index.html
examples/: free_models_filter_demo.py  frontend_integration.html  model_management_demo.py  mvp_option1_complete.py  mvp_option1_final.py  mvp_option1_standalone.py  real_agent_communication_example.py
export/tta-observability-integration/: CHANGELOG.md  README.md  pyproject.toml
export/tta-observability-integration/docs/: OBSERVABILITY_INTEGRATION_PROGRESS.md  OBSERVABILITY_PACKAGE_EXPORT_PLAN.md
export/tta-observability-integration/specs/: observability-integration.md
export/tta-observability-integration/src/observability_integration/: __init__.py  apm_setup.py
export/tta-observability-integration/src/observability_integration/primitives/: __init__.py  cache.py  router.py  timeout.py
export/tta-observability-integration/tests/unit/observability_integration/: test_apm_setup.py  test_cache_primitive.py  test_router_primitive.py  test_timeout_primitive.py
frontend/: ONBOARDING_GUIDE.md  QUICK_START.md  README.md  agents.md  package-lock.json  package.json
gap-analysis/: index.html
implementation-roadmap/: index.html
keploy/: PLAYER_API_TEMPLATE.md  TEST_MANIFEST.md
master-glossary/: index.html
monitoring/: AUTHENTICATION_METRICS.md  DEV_MONITORING_GUIDE.md  README.md  alertmanager.yml  conversational-character-alerts.yaml  docker-compose.monitoring.yml  docker-compose.yml  prometheus-dev.yml  prometheus-staging.yml  prometheus.homelab.yml  prometheus.yml
nginx/: homelab.conf  nginx.conf  staging.conf
(+5883 files in other folders)
